--- a/Project/build.gradle
+++ b/Project/build.gradle
@@ -32,6 +32,7 @@ dependencies {
 	compile group: 'com.github.jreddit', name: 'jreddit', version: '1.0.3'
 	compile group: 'net.sf.sociaal', name: 'freetts', version: '1.2.2'
 	compile group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
+	compile group: 'org.reflections', name: 'reflections', version: '0.9.10'
 	
     testImplementation 'junit:junit:4.12'
 }
