--- a/Project/build.gradle
+++ b/Project/build.gradle
@@ -3,14 +3,17 @@ apply plugin: 'java-library'
 apply plugin: 'java-library-distribution'
 
 buildscript {
-    repositories {
-        jcenter()
+  repositories {
+    maven {
+      url "https://plugins.gradle.org/m2/"
     }
-    dependencies {
-        classpath 'com.github.jengelman.gradle.plugins:shadow:2.0.1'
-    }
+  }
+  dependencies {
+    classpath "com.github.jengelman.gradle.plugins:shadow:6.1.0"
+  }
 }
-apply plugin: 'com.github.johnrengelman.shadow'
+
+apply plugin: "com.github.johnrengelman.shadow"
 
 repositories {
     google()
@@ -18,15 +21,19 @@ repositories {
     mavenCentral()
     mavenLocal()
     maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
+    maven {
+        name 'm2-dv8tion'
+        url 'https://m2.dv8tion.net/releases'
+    }
 }
 
 dependencies {
-	implementation 'net.dv8tion:JDA:4.2.0_214'
-	implementation 'com.sedmelluq:lavaplayer:1.3.55'
+	implementation 'net.dv8tion:JDA:4.2.1_269'
+	implementation 'com.sedmelluq:lavaplayer:1.3.7'
 	
-	compile 'com.google.api-client:google-api-client:1.30.5'
-	compile 'com.google.apis:google-api-services-youtube:v3-rev20200109-1.30.8'
-	compile 'net.sourceforge.htmlunit:htmlunit:2.38.0'
+	compile 'com.google.api-client:google-api-client:1.31.2'
+	compile 'com.google.apis:google-api-services-youtube:v3-rev20210407-1.31.0'
+	compile 'net.sourceforge.htmlunit:htmlunit:2.49.0'
 	
 	compile group: 'com.pi4j', name: 'pi4j-core', version: '1.2'
 	compile group: 'com.github.jreddit', name: 'jreddit', version: '1.0.3'
@@ -34,13 +41,13 @@ dependencies {
 	compile group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
 	compile group: 'org.reflections', name: 'reflections', version: '0.9.10'
 	
-    testImplementation 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.13'
 }
 
 compileJava.options.encoding = 'UTF-8'
 compileTestJava.options.encoding = 'UTF-8'
 javadoc.options.encoding = 'UTF-8'
-	
+
 jar {
 	exclude 'META-INF/*.RSA', 'META-INF/*.SF','META-INF/*.DSA'
 	baseName = 'BonziBot'
