--- a/Project/build.gradle
+++ b/Project/build.gradle
@@ -28,8 +28,9 @@ repositories {
 }
 
 dependencies {
-	implementation 'net.dv8tion:JDA:4.2.1_269'
+	implementation 'net.dv8tion:JDA:4.2.1_275'
 	implementation 'com.sedmelluq:lavaplayer:1.3.7'
+	implementation group: 'org.kohsuke', name: 'github-api', version: '1.131'
 	
 	compile 'com.google.api-client:google-api-client:1.31.2'
 	compile 'com.google.apis:google-api-services-youtube:v3-rev20210407-1.31.0'
