--- a/Project/build.gradle
+++ b/Project/build.gradle
@@ -2,6 +2,8 @@ apply plugin: 'java'
 apply plugin: 'java-library'
 apply plugin: 'java-library-distribution'
 
+sourceCompatibility = '11'
+
 buildscript {
 	repositories {
 		maven {
@@ -17,9 +19,11 @@ apply plugin: "com.github.johnrengelman.shadow"
 
 repositories {
     google()
-    jcenter()
     mavenCentral()
     mavenLocal()
+    maven {
+   		url 'https://jitpack.io'
+    }
     maven {
     	url "https://oss.sonatype.org/content/repositories/snapshots"
     }
@@ -29,29 +33,31 @@ repositories {
     }
 }
 
-configurations.all {
+configurations.configureEach {
     exclude module: 'log4j'
 }
 
 dependencies {
-	implementation group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: '2.1'
+	implementation 'org.apache.logging.log4j:log4j-api:2.8.2'
+  	
+	implementation 'com.github.walkyst:lavaplayer-fork:1.4.3'
+	implementation group: 'net.dv8tion', name: 'JDA', version: '5.0.0-beta.19'
+	implementation group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: '2.8.2'
+	
 	implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
+	implementation group: 'org.kohsuke', name: 'github-api', version: '1.318'
 	
-	implementation 'net.dv8tion:JDA:4.4.0_352'
-	implementation 'com.sedmelluq:lavaplayer:1.3.77'
-	implementation group: 'org.kohsuke', name: 'github-api', version: '1.131'
-	
-	implementation group: 'com.google.api-client', name: 'google-api-client', version: '1.31.5'
+	implementation group: 'com.google.api-client', name: 'google-api-client', version: '1.32.1'
 	implementation group: 'com.google.apis', name: 'google-api-services-youtube', version: 'v3-rev222-1.25.0'
-	implementation group: 'net.sourceforge.htmlunit', name: 'htmlunit', version: '2.53.0'
-	implementation group: 'org.reflections', name: 'reflections', version: '0.9.10'
+	implementation group: 'net.sourceforge.htmlunit', name: 'htmlunit', version: '2.70.0'
+	implementation group: 'org.reflections', name: 'reflections', version: '0.10.2'
 	
-	implementation group: 'com.pi4j', name: 'pi4j-core', version: '1.2'
+	implementation group: 'com.pi4j', name: 'pi4j-core', version: '2.4.0'
 	implementation group: 'com.github.jreddit', name: 'jreddit', version: '1.0.3'
 	implementation group: 'net.sf.sociaal', name: 'freetts', version: '1.2.2'
 	implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
 	
-	testImplementation 'junit:junit:4.13'
+	testImplementation 'junit:junit:4.13.1'
 }
 
 compileJava.options.encoding = 'UTF-8'
@@ -69,9 +75,9 @@ jar {
 		configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
 	}
 }
-task customFatJar(type: Jar) {
+tasks.register('customFatJar', Jar) {
 	manifest {
-	    attributes 'Main-Class': 'com.lukecreator.BonziBot.App'
+		attributes 'Main-Class': 'com.lukecreator.BonziBot.App'
 	}
 	baseName = 'all-in-one-jar'
 	from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
